updates to css stylesheet and deafult input.config
git-svn-id: https://halldsvn.jlab.org/repos/trunk/scripts/monitoring@19825 e333a0bb-b310-0410-bd06-bbc7ae8e47d2

--- a/hdswif/mystyle.css
+++ b/hdswif/mystyle.css
@@ -76,7 +76,7 @@ table, th, td {
     text-align: left;
     vertical-align: middle;
     height: 35px;
-    border: 1px solid black;
+    border: 1px solid white;
     /* background-color: white; */
     /* color: white; */
 }
